--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@escook/express-joi": "^1.1.1",
+    "@hapi/joi": "^17.1.0",
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
